--- a/Supervised_Learning/Supervised_Learning.ipynb
+++ b/Supervised_Learning/Supervised_Learning.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.preprocessing import Imputer\n",
+    "\n",
+    "df = pd.read_csv('train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
